Details
-
Bug
-
Resolution: Done
-
P2: Important
-
5.0.1
-
None
-
Mac OS X 10.7.4, XCode 4.3.3, Qt 5.0.1
-
-
17e8286fef874630cb2703bd20885c6005bf674a
Description
Double-clicking in a QGLWidget window does not issue a mouseDoubleClickEvent(). However, single-clicking in the window does issue a mousePressEvent(). mouseDoubleClickEvent worked under Qt 4.8.x.
See attached test program.
Attachments
Issue Links
- replaces
-
QTBUG-30065 Qt 5 QWidget consumes mouseDoubleClickEvent
-
- Closed
-
- resulted in
-
QTBUG-36423 QPushButton does not accept mouseDoubleClickEvent
-
- Closed
-