Fixed mouse double click events not bubbling up to parent widgets.

The bug was caused by changes b371f3f943703840d0dfbe30505018bcca06e260
and 3bb902495291c50a2f06e8e03a62a647db3e5cd4, which removed the event
forwarding that QWidget::mouseDoubleClickEvent() used to do without
making sure to call ignore() on the event like
QWidget::mousePressEvent() does.

Task-number: QTBUG-29680
Change-Id: I98af8052ad3dd1dea15d07a710aa9212ef5e4a68
Reviewed-by: Friedemann Kleint <Friedemann.Kleint@digia.com>